# pyserialem

./: .gitignore  LICENCE  README.md  pyproject.toml  pyserialem.py  setup.py
.github/workflows/: publish.yml  test.yml
data/: gm.mrc.mdoc  nav.nav
demos/: montage_processing_serialem.ipynb
pyserialem/: __init__.py  montage.py  pyserialem.py  reader.py  utils.py
tests/: conftest.py  test_bin_ndarray.py  test_io.py  test_items.py
