[tool]
[tool.poetry]
name = "pyserialem"
version = "0.1.0"
description = "Python module to read/write SerialEM .nav files."
keywords = [
	"serialem",
	"electron-microscopy",
	"navigator",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
]
homepage = "http://github.com/stefsmeets/pyserialem"
repository = "http://github.com/stefsmeets/pyserialem"
documentation = "http://github.com/stefsmeets/pyserialem"
maintainers = ["Stef Smeets <s.smeets@tudelft.nl>"]
authors = ["Stef Smeets <s.smeets@tudelft.nl>"]
readme = "README.md"
license = "GPL-3.0-only"
include = [
    ".pre-commit-yaml",
    "LICENCE",
    "pyproject.toml",
    "README.md",
    "setup.py",
    "pyserialem/*.py",
    "data/nav.nav",
    "data/gm.mrc.mdoc",
    "tests/*.py",
]

[tool.poetry.dependencies]
python = ">=3.6*"
matplotlib = ">=3.1.2"
numpy = ">=1.17.3"
mrcfile = "^1.1.2"

[tool.poetry.dev-dependencies]
check-manifest = "*"
pre-commit = "*"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/stefsmeets/pyserialem/issues"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
