[tool]
[tool.poetry]
name = "pyserialem"
version = "0.3.2"
description = "Python module to read/write SerialEM .nav files."
keywords = [
	"serialem",
	"electron-microscopy",
	"navigator",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
]
homepage = "http://github.com/instamatic-dev/pyserialem"
repository = "http://github.com/instamatic-dev/pyserialem"
documentation = "http://github.com/instamatic-dev/pyserialem"
maintainers = ["Stef Smeets <s.smeets@esciencecenter.nl>"]
authors = ["Stef Smeets <s.smeets@esciencecenter.nl>"]
readme = "README.md"
license = "BSD-3-clause"
include = [
    ".pre-commit-yaml",
    "LICENCE",
    "setup.py",
    "pyserialem/*.py",
    "data/nav.nav",
    "data/gm.mrc.mdoc",
    "tests/*.py",
]

[tool.poetry.dependencies]
python = ">=3.6.1"
matplotlib = ">=3.1.2"
numpy = ">=1.17.3"
mrcfile = ">=1.1.2"
lmfit = ">=1.0.1"
scikit-image = ">=0.17.2"
tqdm = ">=4.46.1"
scipy = ">=1.5.0"


[tool.poetry.dev-dependencies]
check-manifest = "*"
pre-commit = "*"
pytest = ">=5.4.1"
pytest-cov = ">=2.8.1"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/instamatic-dev/pyserialem/issues"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
